--- a/tests/inline/dune
+++ b/tests/inline/dune
@@ -1,5 +1,5 @@
 (test
- (name variants)
+ (name inline)
  (libraries jsont jsont.bytesrw)
  (preprocess
   (pps ppx_yojson_conv ppx_deriving_jsont)))
