--- a/ppx_deriving_jsont.opam
+++ b/ppx_deriving_jsont.opam
@@ -2,9 +2,9 @@
 opam-version: "2.0"
 synopsis: "A ppx deriver for Jsont"
 description: "A _really_ long description"
-maintainer: [""]
+maintainer: ["Ulysse Gérard"]
 authors: ["Ulysse Gérard"]
-license: "AGPL-3.0"
+license: "MIT"
 homepage: "https://github.com/voodoos/ppx_deriving_jsont"
 bug-reports: "https://github.com/voodoos/ppx_deriving_jsont/issues"
 depends: [
